--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             alt="freecodecamp logo"
             class="hero-img"
             loading="lazy"
+            width="400"
           />
 
           <h1 class="hero-title">OUR NEW CURRICULUM</h1>
@@ -31,6 +32,35 @@
             focus.
           </p>
         </header>
+
+        <div class="author">
+          <p class="author-name">
+            By
+            <a href="https://freecodecamp.org" target="_blank" rel="noreferrer"
+              >freeCodeCamp</a
+            >
+          </p>
+
+          <p class="publish-date">March 7, 2019</p>
+        </div>
+
+        <div class="social-icons">
+          <a href="https://www.facebook.com/freecodecamp">
+            <i class="fab fa-facebook-f"></i>
+          </a>
+          <a href="https://twitter.com/freecodecamp">
+            <i class="fab fa-twitter"></i>
+          </a>
+          <a href="https://instagram.com/freecodecamp">
+            <i class="fab fa-instagram"></i>
+          </a>
+          <a href="https://www.linkedin.com/school/freecodecamp">
+            <i class="fab fa-linkedin-in"></i>
+          </a>
+          <a href="https://www.youtube.com/freecodecamp">
+            <i class="fab fa-youtube"></i>
+          </a>
+        </div>
       </section>
     </main>
   </body>
