used grid-template-columns to divide 3rd section into 2 columns, the second being 2X the width of the first

--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
     <title>Magazine</title>
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Anton%7CBaskervville%7CRaleway&display=swap"
-    />
+      href="https://fonts.googleapis.com/css?family=Anton%7CBaskervville%7CRaleway&display=swap" />
     <link
       rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
-    />
+      href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -22,8 +20,7 @@
             src="https://cdn.freecodecamp.org/platform/universal/fcc_meta_1920X1080-indigo.png"
             alt="freecodecamp logo"
             class="hero-img"
-            loading="lazy"
-          />
+            loading="lazy" />
 
           <h1 class="hero-title">OUR NEW CURRICULUM</h1>
           <p class="hero-subtitle">
@@ -180,16 +177,14 @@
             class="image-1"
             loading="lazy"
             width="600"
-            height="400"
-          />
+            height="400" />
           <img
             src="https://cdn.freecodecamp.org/testable-projects-fcc/images/calc.png"
             alt="image of a calculator project"
             loading="lazy"
             class="image-2"
             width="400"
-            height="400"
-          />
+            height="400" />
 
           <blockquote class="image-quote">
             <hr />
@@ -207,8 +202,7 @@
             loading="lazy"
             class="image-3"
             width="600"
-            height="400"
-          />
+            height="400" />
         </aside>
       </section>
     </main>
